--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,8 @@
     "require-dev": {
         "mockery/mockery": "^1.1",
         "phpunit/phpunit": "^7.2",
-        "squizlabs/php_codesniffer": "^3.3"
+        "squizlabs/php_codesniffer": "^3.3",
+        "symfony/dotenv": "^4.1"
     },
     "autoload": {
         "psr-4": {
