add ext-tokenizer as requirement
While phpstorm does not show it as an extension and the usage without require
as missing requirement it can be disabled like in alpine linux where it is an
extra package.

--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,8 @@
     "require": {
         "php": "^7.1",
         "ext-pdo": "*",
-        "ext-json": "*"
+        "ext-json": "*",
+        "ext-tokenizer": "*"
     },
     "require-dev": {
         "mockery/mockery": "^1.1",
